@@ -1162,8 +1162,10 @@ typedef struct slurm_ctl_conf {
 				          * be propagated */
         char *propagate_rlimits;/* Propagate (all/specific) resource limits */
         char *propagate_rlimits_except;/* Propagate all rlimits except these */
-	uint16_t resume_rate;	/* nodes to make full power, per minute */
+	uint16_t resume_delay;	/* minimum time from suspend before attempting
+				 * to resume a node */
 	char *resume_program;	/* program to make nodes full power */
+	uint16_t resume_rate;	/* nodes to make full power, per minute */
 	uint16_t resv_over_run;	/* how long a running job can exceed 
 				 * reservation time */
 	uint16_t ret2service;	/* 1 return DOWN node to service at 
