@@ -98,6 +98,7 @@ extern char *default_plugstack;
 #define DEFAULT_PRIORITY_TYPE       "priority/basic"
 #define DEFAULT_PROPAGATE_PRIO_PROCESS 0
 #define DEFAULT_RETURN_TO_SERVICE   0
+#define DEFAULT_RESUME_DELAY        10
 #define DEFAULT_RESUME_RATE         300
 #define DEFAULT_SAVE_STATE_LOC      "/tmp"
 #define DEFAULT_SCHEDROOTFILTER     1
